tests/snapshots/snapshots__budget_pluggy_src_pluggy_4000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 4000 (4022 tokens)

__init__.py
     1→__all__ = [
    17→from ._hooks import HookCaller
    18→from ._hooks import HookImpl
    19→from ._hooks import HookimplMarker
    20→from ._hooks import HookimplOpts
    21→from ._hooks import HookRelay
    22→from ._hooks import HookspecMarker
    23→from ._hooks import HookspecOpts
    24→from ._manager import PluginManager
    25→from ._manager import PluginValidationError
    26→from ._result import HookCallError
    27→from ._result import Result
    28→from ._warnings import PluggyTeardownRaisedWarning
    29→from ._warnings import PluggyWarning
    32→def __getattr__(name: str) -> str:
    33→    if name == "__version__":
    34→        from importlib.metadata import version
    35→
      →…

_callers.py
     7→from collections.abc import Generator
     8→from collections.abc import Mapping
     9→from collections.abc import Sequence
    10→from typing import cast
    11→from typing import NoReturn
    12→from typing import TYPE_CHECKING
    13→from typing import TypeAlias
    14→import warnings
    16→from ._hooks import HookImpl
    17→from ._result import HookCallError
    18→from ._result import Result
    19→from ._warnings import PluggyTeardownRaisedWarning
    22→# Need to distinguish between old- and new-style hook wrappers.
    23→# Wrapping with a tuple is the fastest type-safe way I found to do it.
    24→Teardown: TypeAlias = Generator[None, object, object]
    27→def run_old_style_hookwrapper(
    28→    hook_impl: HookImpl, hook_name: str, args: Sequence[object]
    29→) -> Teardown:
    30→    """
    31→    backward compatibility wrapper to run a old style hookwrapper as a wrapper
    32→    """
    33→    if TYPE_CHECKING:
      →    …
    60→def _raise_wrapfail …
    70→def _warn_teardown_exception …
    82→def _multicall …

_hooks.py
     7→from collections.abc import Callable
     8→from collections.abc import Generator
     9→from collections.abc import Mapping
    10→from collections.abc import Sequence
    11→from collections.abc import Set
    12→import inspect
    13→import sys
    14→from types import ModuleType
    15→from typing import Any
    16→from typing import Final
    17→from typing import final
    18→from typing import overload
    19→from typing import TYPE_CHECKING
    20→from typing import TypeAlias
    21→from typing import TypedDict
    22→from typing import TypeVar
    23→import warnings
    25→from ._result import Result
    28→_T = TypeVar("_T")
    29→_F = TypeVar("_F", bound=Callable[..., object])
    31→_Namespace: TypeAlias = ModuleType | type
    32→_Plugin: TypeAlias = object
    33→_HookExec: TypeAlias = Callable[
    37→_HookImplFunction: TypeAlias = Callable[..., _T | Generator[None, Result[_T], None]]
    40→class HookspecOpts(TypedDict):
    42→
      →…
    56→class HookimplOpts(TypedDict):
    58→
      →…
    77→@final
    78→class HookspecMarker:
    85→
    86→    __slots__ = ("project_name",)
    87→
    88→    def __init__ …
   111→    def __call__ …
   164→@final
   165→class HookimplMarker:
   172→
   173→    __slots__ = ("project_name",)
   174→
   175→    def __init__ …
   202→    def __call__ …
   281→def normalize_hookimpl_opts …
   290→_PYPY = hasattr(sys, "pypy_version_info")
   293→def varnames …
   358→@final
   359→class HookRelay:
   362→
   363→    __slots__ = ("__dict__",)
   364→
   365→    def __init__ …
   370→        def __getattr__ …
   377→_CallHistory: TypeAlias = list[
   382→class HookCaller:
   384→
   393→    def __init__ …
   419→    # TODO: Document, or make private.
   420→    def has_spec(self) -> bool:
   421→        return self.spec is not None
   423→    # TODO: Document, or make private.
   424→    def set_specification(
   425→        self,
   426→        specmodule_or_class: _Namespace,
   427→        spec_opts: HookspecOpts,
   428→    ) -> None:
   429→        if self.spec is not None:
   430→            raise ValueError(
   431→                f"Hook {self.spec.name!r} is already registered "
   432→                f"within namespace {self.spec.namespace}"
   433→            )
      →            …
   438→    def is_historic …
   442→    def _remove_plugin(self, plugin: _Plugin) -> None:
   449→    def get_hookimpls …
   453→    def _add_hookimpl(self, hookimpl: HookImpl) -> None:
   477→    def __repr__ …
   480→    def _verify_all_args_are_provided(self, kwargs: Mapping[str, object]) -> None:
   499→    def __call__ …
   516→    def call_historic …
   543→    def call_extra …
   577→    def _maybe_apply_history(self, method: HookImpl) -> None:
   593→class _SubsetHookCaller(HookCaller):
   596→
   612→    def __init__ …
   619→    def _hookimpls(self) -> list[HookImpl]:
   626→    @property
   627→    def spec(self) -> HookSpec | None:  # type: ignore[override]
   628→        return self._orig.spec
   631→    def _call_history(self) -> _CallHistory | None:  # type: ignore[override]
   634→    def __repr__ …
   638→@final
   639→class HookImpl:
   641→
   642→    __slots__ = (
   643→        "function",
   644→        "argnames",
   645→        "kwargnames",
   646→        "plugin",
   647→        "opts",
   648→        "plugin_name",
   649→        "wrapper",
   650→        "hookwrapper",
   651→        "optionalhook",
   652→        "tryfirst",
   653→        "trylast",
   654→    )
   655→
   656→    def __init__ …
   692→    def __repr__ …
   696→@final
   697→class HookSpec:
   698→    __slots__ = (
   699→        "namespace",
   700→        "function",
   701→        "name",
   702→        "argnames",
   703→        "kwargnames",
   704→        "opts",
   705→        "warn_on_impl",
   706→        "warn_on_impl_args",
   707→    )
   708→
   709→    def __init__ …

_manager.py
     3→from collections.abc import Callable
     4→from collections.abc import Iterable
     5→from collections.abc import Mapping
     6→from collections.abc import Sequence
     7→import inspect
     8→import types
     9→from typing import Any
    10→from typing import cast
    11→from typing import Final
    12→from typing import TYPE_CHECKING
    13→from typing import TypeAlias
    14→import warnings
    16→from . import _tracing
    17→from ._callers import _multicall
    18→from ._hooks import _HookImplFunction
    19→from ._hooks import _Namespace
    20→from ._hooks import _Plugin
    21→from ._hooks import _SubsetHookCaller
    22→from ._hooks import HookCaller
    23→from ._hooks import HookImpl
    24→from ._hooks import HookimplOpts
    25→from ._hooks import HookRelay
    26→from ._hooks import HookspecOpts
    27→from ._hooks import normalize_hookimpl_opts
    28→from ._result import Result
    33→    import importlib.metadata
    36→_BeforeTrace: TypeAlias = Callable[[str, Sequence[HookImpl], Mapping[str, Any]], None]
    37→_AfterTrace: TypeAlias = Callable[
    42→def _warn_for_function …
    52→class PluginValidationError(Exception):
    53→    """Plugin failed validation.
    54→
      →…
    58→
    59→    def __init__(self, plugin: _Plugin, message: str) -> None:
    65→class DistFacade:
    66→    """Emulate a pkg_resources Distribution"""
    67→
    68→    def __init__(self, dist: importlib.metadata.Distribution) -> None:
    71→    @property
    72→    def project_name(self) -> str:
    73→        name: str = self.metadata["name"]
    74→        return name
    76→    def __getattr__(self, attr: str, default: Any | None = None) -> Any:
    79→    def __dir__(self) -> list[str]:
    83→class PluginManager:
    84→    """Core class which manages registration of plugin objects and 1:N hook
    85→    calling.
      →    …
    99→
   100→    def __init__(self, project_name: str) -> None:
   114→    def _hookexec …
   125→    def register(self, plugin: _Plugin, name: str | None = None) -> str | None:
   176→    def parse_hookimpl_opts(self, plugin: _Plugin, name: str) -> HookimplOpts | None:
   201→    def unregister(
   202→        self, plugin: _Plugin | None = None, name: str | None = None
   203→    ) -> Any | None:
   233→    def set_blocked(self, name: str) -> None:
   238→    def is_blocked(self, name: str) -> bool:
   242→    def unblock(self, name: str) -> bool:
   252→    def add_hookspecs(self, module_or_class: _Namespace) -> None:
   278→    def parse_hookspec_opts(
   279→        self, module_or_class: _Namespace, name: str
   280→    ) -> HookspecOpts | None:
   296→    def get_plugins(self) -> set[Any]:
   300→    def is_registered(self, plugin: _Plugin) -> bool:
   304→    def get_canonical_name(self, plugin: _Plugin) -> str:
   315→    def get_plugin(self, name: str) -> Any | None:
   319→    def has_plugin(self, name: str) -> bool:
   323→    def get_name(self, plugin: _Plugin) -> str | None:
   331→    def _verify_hook …
   379→    def check_pending(self) -> None:
   395→    def load_setuptools_entrypoints(self, group: str, name: str | None = None) -> int:
   425→    def list_plugin_distinfo(self) -> list[tuple[_Plugin, DistFacade]]:
   430→    def list_name_plugin(self) -> list[tuple[str, _Plugin]]:
   434→    def get_hookcallers(self, plugin: _Plugin) -> list[HookCaller] | None:
   450→    def add_hookcall_monitoring(
   451→        self, before: _BeforeTrace, after: _AfterTrace
   452→    ) -> Callable[[], None]:
   487→    def enable_tracing(self) -> Callable[[], None]:
   512→    def subset_hook_caller(
   513→        self, name: str, remove_plugins: Iterable[_Plugin]
   514→    ) -> HookCaller:
   525→def _formatdef …

_result.py
     7→from collections.abc import Callable
     8→from types import TracebackType
     9→from typing import cast
    10→from typing import final
    11→from typing import Generic
    12→from typing import TypeAlias
    13→from typing import TypeVar
    16→_ExcInfo: TypeAlias = tuple[type[BaseException], BaseException, TracebackType | None]
    20→class HookCallError(Exception):
    21→    """Hook was called incorrectly."""
    24→@final
    25→class Result(Generic[ResultType]):
    26→    """An object used to inspect and set the result in a :ref:`hook wrapper
    27→    <hookwrappers>`."""
    28→
    29→    __slots__ = ("_result", "_exception", "_traceback")
    30→
    31→    def __init__(
    32→        self,
    33→        result: ResultType | None,
    34→        exception: BaseException | None,
    35→    ) -> None:
    36→        """:meta private:"""
    42→    @property
    43→    def excinfo(self) -> _ExcInfo | None:
    44→        """:meta private:"""
    45→        exc = self._exception
    46→        if exc is None:
    47→            return None
      →            …
    51→    @property
    52→    def exception(self) -> BaseException | None:
    53→        """:meta private:"""
    54→        return self._exception
    56→    @classmethod
    57→    def from_call(cls, func: Callable[[], ResultType]) -> Result[ResultType]:
    58→        """:meta private:"""
    59→        __tracebackhide__ = True
    60→        result = exception = None
    61→        try:
      →        …
    67→    def force_result(self, result: ResultType) -> None:
    68→        """Force the result(s) to ``result``.
    69→
      →…
    80→    def force_exception(self, exception: BaseException) -> None:
    81→        """Force the result to fail with ``exception``.
    82→
      →…
    91→    def get_result(self) -> ResultType:
    92→        """Get the result(s) for this hook call.
    93→
      →…

_tracing.py
     7→from collections.abc import Callable
     8→from collections.abc import Sequence
     9→from typing import Any
    16→class TagTracer:
    17→    def __init__(self) -> None:
    22→    def get(self, name: str) -> TagTracerSub:
    25→    def _format_message(self, tags: Sequence[str], args: Sequence[object]) -> str:
    42→    def _processmessage(self, tags: tuple[str, ...], args: tuple[object, ...]) -> None:
    48→    def setwriter(self, writer: _Writer | None) -> None:
    51→    def setprocessor(self, tags: str | tuple[str, ...], processor: _Processor) -> None:
    59→class TagTracerSub:
    60→    def __init__(self, root: TagTracer, tags: tuple[str, ...]) -> None:
    64→    def __call__(self, *args: object) -> None:
    67→    def get(self, name: str) -> TagTracerSub:

_warnings.py
     1→from typing import final
     4→class PluggyWarning(UserWarning):
     5→    """Base class for all warnings emitted by pluggy."""
     6→
     7→    __module__ = "pluggy"
    10→@final
    11→class PluggyTeardownRaisedWarning(PluggyWarning):
    12→    """A plugin raised an exception during an :ref:`old-style hookwrapper
    13→    <old_style_hookwrappers>` teardown.
    14→
    15→    Such exceptions are not handled by pluggy, and may cause subsequent
    16→    teardowns to be executed at unexpected times, or be skipped entirely.
    17→
    18→    This is an issue in the plugin implementation.
    19→
    20→    If the exception is unintended, fix the underlying cause.
    21→
      →…
    26→
    27→    __module__ = "pluggy"
