tests/snapshots/snapshots__budget_pluggy_src_pluggy_500.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 500 (482 words)

__init__.py
     1→__all__ = [
     2→    "__version__",
     3→    "PluginManager",
     4→    "PluginValidationError",
     5→    "HookCaller",
     6→    "HookCallError",
     7→    "HookspecOpts",
     8→    "HookimplOpts",
     9→    "HookImpl",
    10→    "HookRelay",
    11→    "HookspecMarker",
    12→    "HookimplMarker",
    13→    "Result",
    14→    "PluggyWarning",
    15→    "PluggyTeardownRaisedWarning",
    16→]
_callers.py
    22→# Need to distinguish between old- and new-style hook wrappers.
    23→# Wrapping with a tuple is the fastest type-safe way I found to do it.
    24→Teardown: TypeAlias = Generator[None, object, object]
_hooks.py
    28→_T …
    29→_F …
    31→_Namespace …
    32→_Plugin …
    33→_HookExec …
    37→_HookImplFunction …
    40→class HookspecOpts(TypedDict):
    42→
      →…
    56→class HookimplOpts(TypedDict):
    58→
      →…
    78→class HookspecMarker:
    85→
    86→    __slots__ = ("project_name",)
    87→
    88→    def __init__(self, project_name: str) -> None:
    89→        self.project_name: Final = project_name
    90→
    91→    @overload
    92→    def __call__(
   165→class HookimplMarker:
   172→
   173→    __slots__ = ("project_name",)
   174→
   175→    def __init__(self, project_name: str) -> None:
   176→        self.project_name: Final = project_name
   177→
   178→    @overload
   179→    def __call__(
   290→_PYPY …
   359→class HookRelay:
   362→
   363→    __slots__ = ("__dict__",)
   364→
   365→    def __init__(self) -> None:
   366→        """:meta private:"""
   367→
   368→    if TYPE_CHECKING:
   369→
   377→_CallHistory …
   382→class HookCaller:
   384→
   419→    # TODO: Document, or make private.
   420→    def has_spec(self) -> bool:
   421→        return self.spec is not None
   423→    # TODO: Document, or make private.
   424→    def set_specification(
   425→        self,
   426→        specmodule_or_class: _Namespace,
   427→        spec_opts: HookspecOpts,
   428→    ) -> None:
   429→        if self.spec is not None:
   430→            raise ValueError(
   431→                f"Hook {self.spec.name!r} is already registered "
   432→                f"within namespace {self.spec.namespace}"
      →…
   593→class _SubsetHookCaller(HookCaller):
   596→
   618→    @property  # type: ignore[misc]
   619→    def _hookimpls(self) -> list[HookImpl]:
   620→        return [
   621→            impl
      →…
   626→    @property
   627→    def spec(self) -> HookSpec | None:  # type: ignore[override]
   628→        return self._orig.spec
   630→    @property
   631→    def _call_history(self) -> _CallHistory | None:  # type: ignore[override]
   632→        return self._orig._call_history
   639→class HookImpl:
   641→
   642→    __slots__ = (
   643→        "function",
   644→        "argnames",
   645→        "kwargnames",
   646→        "plugin",
   647→        "opts",
   648→        "plugin_name",
   697→class HookSpec:
   698→    __slots__ = (
   699→        "namespace",
   700→        "function",
   701→        "name",
   702→        "argnames",
   703→        "kwargnames",
   704→        "opts",
   705→        "warn_on_impl",
_manager.py
    36→_BeforeTrace …
    37→_AfterTrace …
    52→class PluginValidationError(Exception):
    58→
    65→class DistFacade:
    67→
    71→    @property
    72→    def project_name(self) -> str:
    73→        name: str = self.metadata["name"]
    74→        return name
    83→class PluginManager:
    99→
_result.py
    16→_ExcInfo …
    20→class HookCallError(Exception):
    25→class Result(Generic[ResultType]):
    28→
    29→    __slots__ = ("_result", "_exception", "_traceback")
    30→
    31→    def __init__(
    32→        self,
    33→        result: ResultType | None,
    34→        exception: BaseException | None,
    35→    ) -> None:
    42→    @property
    43→    def excinfo(self) -> _ExcInfo | None:
    44→        """:meta private:"""
    45→        exc = self._exception
    46→        if exc is None:
    47→            return None
    48→        else:
      →…
    51→    @property
    52→    def exception(self) -> BaseException | None:
    53→        """:meta private:"""
    54→        return self._exception
    56→    @classmethod
    57→    def from_call(cls, func: Callable[[], ResultType]) -> Result[ResultType]:
    58→        """:meta private:"""
    59→        __tracebackhide__ = True
    60→        result = exception = None
    61→        try:
    62→            result = func()
      →…
_tracing.py
    16→class TagTracer:
    17→    def __init__(self) -> None:
    59→class TagTracerSub:
    60→    def __init__(self, root: TagTracer, tags: tuple[str, ...]) -> None:
_warnings.py
     4→class PluggyWarning(UserWarning):
     6→
      →…
    11→class PluggyTeardownRaisedWarning(PluggyWarning):
    26→
    27→    __module__ = "pluggy"
