tests/snapshots/snapshots__budget_python_dotenv_2000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 2000 (2017 tokens)

CHANGELOG.md
     1→# Changelog
    21→### Fixed

CONTRIBUTING.md
     1→Contributing

README.md
     1→# python-dotenv
     3→[![Build Status][build_status_badge]][build_status_link]
     4→[![PyPI version][pypi_badge]][pypi_link]
     5→
      →…
    22→## Getting Started
    78→## Other Use Cases
   147→## Command-line Interface
   169→## File format
   234→## Related Projects
   246→## Acknowledgements

docs/reference.md
     1→# ::: dotenv

mkdocs.yml
     1→site_name: python-dotenv
     2→repo_url: https://github.com/theskumar/python-dotenv
     3→edit_uri: ""
     4→theme:
    10→    - navigation.sections
    11→
    12→markdown_extensions:
    13→  - mdx_truly_sane_lists
    14→
    15→plugins:
    24→  - search
    25→nav:

pyproject.toml

ruff.toml
     1→[lint]

src/dotenv/__init__.py
     1→from typing import Any, Optional
     3→from .main import dotenv_values, find_dotenv, get_key, load_dotenv, set_key, unset_key
     6→def load_ipython_extension(ipython: Any) -> None:
    12→def get_cli_string(
    13→    path: Optional[str] = None,
    14→    action: Optional[str] = None,
    15→    key: Optional[str] = None,
    16→    value: Optional[str] = None,
    17→    quote: Optional[str] = None,
    18→):
    19→    """Returns a string suitable for running as a shell script.
    20→
    21→    Useful for converting a arguments passed to a fabric task
    22→    to be passed to a `local` or `run` command.
    23→    """
    42→__all__ = [

src/dotenv/__main__.py
     3→from .cli import cli

src/dotenv/cli.py
    20→from .main import dotenv_values, set_key, unset_key
    21→from .version import __version__
    24→def enumerate_env() -> Optional[str]:
    25→    """
    26→    Return a path for the ${pwd}/.env file.
      →    …
    60→@click.version_option(version=__version__)
      →…
    62→def cli(ctx: click.Context, file: Any, quote: Any, export: Any) -> None:
    67→@contextmanager
    68→def stream_file(path: os.PathLike) -> Iterator[IO[str]]:
    93→def list_values(ctx: click.Context, output_format: str) -> None:
    94→    """Display all the stored key/value."""
   112→@cli.command(name="set")
      →…
   116→def set_value(ctx: click.Context, key: Any, value: Any) -> None:
   128→@cli.command()
      →…
   131→def get(ctx: click.Context, key: Any) -> None:
   145→@cli.command()
      →…
   148→def unset(ctx: click.Context, key: Any) -> None:
   172→@click.argument("commandline", nargs=-1, type=click.UNPROCESSED)
   173→def run(ctx: click.Context, override: bool, commandline: tuple[str, ...]) -> None:
   193→def run_command(command: List[str], env: Dict[str, str]) -> None:
   194→    """Replace the current process with the specified command.
   195→
      →…

src/dotenv/ipython.py
     1→from IPython.core.magic …
     2→from IPython.core.magic_arguments …
     8→from .main import find_dotenv, load_dotenv
    11→@magics_class
    12→class IPythonDotEnv(Magics):
    13→    @magic_arguments()
    14→    @argument(
    15→        "-o",
    16→        "--override",
    17→        action="store_true",
    18→        help="Indicate to override existing variables",
    19→    )
    20→    @argument(
    21→        "-v",
    22→        "--verbose",
    23→        action="store_true",
    24→        help="Indicate function calls to be verbose",
    25→    )
    26→    @argument(
    27→        "dotenv_path",
    28→        nargs="?",
    29→        type=str,
    30→        default=".env",
    31→        help="Search in increasingly higher folders for the `dotenv_path`",
    32→    )
    33→    @line_magic
    34→    def dotenv(self, line):
    35→        args = parse_argstring(self.dotenv, line)
    36→        # Locate the .env file
    37→        dotenv_path = args.dotenv_path
    38→        try:
      →        …
    48→def load_ipython_extension(ipython):
    49→    """Register the %dotenv magic."""
    50→    ipython.register_magics(IPythonDotEnv)

src/dotenv/main.py
    13→from .parser import Binding, parse_stream
    14→from .variables import parse_variables
    25→def _load_dotenv_disabled() -> bool:
    45→class DotEnv:
    64→    def _get_stream(self) -> Iterator[IO[str]]:
   141→@contextmanager
   142→def rewrite(
   143→    path: StrPath,
   144→    encoding: Optional[str],
   145→) -> Iterator[Tuple[IO[str], IO[str]]]:
   146→    pathlib.Path(path).touch()
   147→
   148→    with tempfile.NamedTemporaryFile(mode="w", encoding=encoding, delete=False) as dest:
   149→        error = None
   150→        try:
      →        …
   269→def _walk_to_root(path: str) -> Iterator[str]:
   423→def _is_file_or_fifo(path: StrPath) -> bool:

src/dotenv/parser.py
     1→import codecs …
     2→import re …
     3→from typing …
    35→class Original(NamedTuple):
    36→    string: str
    37→    line: int
    40→class Binding(NamedTuple):
    41→    key: Optional[str]
    42→    value: Optional[str]
    43→    original: Original
    44→    error: bool
    47→class Position:
    52→    @classmethod
    53→    def start(cls) -> "Position":
    54→        return cls(chars=0, line=1)
    65→class Error(Exception):
    66→    pass
    69→class Reader:

src/dotenv/variables.py
     1→import re …
     2→from abc …
     3→from typing …
     5→_posix_variable: Pattern[str] = re.compile(
    18→class Atom(metaclass=ABCMeta):
    25→    @abstractmethod
    26→    def resolve(self, env: Mapping[str, Optional[str]]) -> str: ...
    29→class Literal(Atom):
    48→class Variable(Atom):

src/dotenv/version.py
     1→__version__ = "1.2.1"

tests/conftest.py
     5→@pytest.fixture
     6→def cli():
    12→@pytest.fixture
    13→def dotenv_path(tmp_path):

tests/test_cli.py

tests/test_fifo_dotenv.py
    13→def test_load_dotenv_from_fifo(tmp_path: pathlib.Path, monkeypatch):

tests/test_ipython.py
    14→def test_ipython_existing_variable_no_override(tmp_path):
    33→def test_ipython_existing_variable_override(tmp_path):
    52→def test_ipython_new_variable(tmp_path):

tests/test_is_interactive.py
     8→class TestIsInteractive:
    31→

tests/test_main.py

tests/test_parser.py
   550→def test_parse_stream(test_input, expected):

tests/test_utils.py
     1→from dotenv …
     4→def test_to_cli_string():

tests/test_variables.py
    32→def test_parse_variables(value, expected):

tests/test_zip_imports.py
    23→class FileToAdd:
    46→def test_load_dotenv_gracefully_handles_zip_imports_when_no_env_file(tmp_path):
    69→def test_load_dotenv_outside_zip_file_when_called_in_zipfile(tmp_path):
